--- a/index.html
+++ b/index.html
@@ -153,42 +153,42 @@
           </li>
           <li>
             <a href="components-carousel.html">
-              <i class="bi bi-circle"></i><span></span>
+              <i class="bi bi-circ></i><span></span>
             </a>
           </li>
           <li>
             <a href="components-list-group.html">
-              <i class="bi bi-circle"></i><span></span>
+              <i class="bi bi-circle></i><span></span>
             </a>
           </li>
           <li>
             <a href="components-modal.html">
-              <i class="bi bi-circle"></i><span></span>
+              <i class="bi bi-circl></i><span></span>
             </a>
           </li>
           <li>
             <a href="components-tabs.html">
-              <i class="bi bi-circle"></i><span></span>
+              <i class="bi bi-circl></i><span></span>
             </a>
           </li>
           <li>
             <a href="components-pagination.html">
-              <i class="bi bi-circle"></i><span></span>
+              <i class="bi bi-circl></i><span></span>
             </a>
           </li>
           <li>
             <a href="components-progress.html">
-              <i class="bi bi-circle"></i><span></span>
+              <i class="bi bi-circl"></i><span></span>
             </a>
           </li>
           <li>
             <a href="components-spinners.html">
-              <i class="bi bi-circle"></i><span></span>
+              <i class="bi bi-circl></i><span></span>
             </a>
           </li>
           <li>
             <a href="components-tooltips.html">
-              <i class="bi bi-circle"></i><span></span>
+              <i class="bi bi-circl></i><span></span>
             </a>
           </li>
         </ul>
