--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </a>
           </li>
           <li>
-            <a href="components-carousel.html">
+            <a href="components-carousel>
               <i class="bi bi-circle"></i><span></span>
             </a>
           </li>
