--- a/index.html
+++ b/index.html
@@ -157,37 +157,37 @@
             </a>
           </li>
           <li>
-            <a href="components-list-group.html">
+            <a href="components-list-group.htm>
               <i class="bi bi-circle"></i><span></span>
             </a>
           </li>
           <li>
-            <a href="components-modal.html">
+            <a href="components-modal.html>
               <i class="bi bi-circle"></i><span></span>
             </a>
           </li>
           <li>
-            <a href="components-tabs.html">
+            <a href="components-tabs.html>
               <i class="bi bi-circle"></i><span></span>
             </a>
           </li>
           <li>
-            <a href="components-pagination.html">
+            <a href="components-pagination.html>
               <i class="bi bi-circle"></i><span></span>
             </a>
           </li>
           <li>
-            <a href="components-progress.html">
+            <a href="components-progress.html>
               <i class="bi bi-circle"></i><span></span>
             </a>
           </li>
           <li>
-            <a href="components-spinners.html">
+            <a href="components-spinners.html>
               <i class="bi bi-circle"></i><span></span>
             </a>
           </li>
           <li>
-            <a href="components-tooltips.html">
+            <a href="components-tooltips.ht>
               <i class="bi bi-circle"></i><span></span>
             </a>
           </li>
