--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@ PingOne Enterprise)</li>
             <div>
               <h4>enhancement</h4>
             <ol>
-              <li>Updated Log4j2 Libraries
+              <h2>update logic 4j2 libaries</h2>
+              <li>
 o EIK 2.3.0.2 uses Log4j Version 2.17.0 to address the vulnerabilities stated
 in CVE-2021-44228, CVE-2021-45046, and CVE-2021-45105.</li>
             
